<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/divider4"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toTopOf="@+id/divider5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider4">

        <!--        <TableRow-->
        <!--            android:id="@+id/TableRow0"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:layout_marginBottom="16dp">-->

        <!--            <ImageView-->
        <!--                android:id="@+id/imageView0"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginEnd="6dp"-->
        <!--                android:adjustViewBounds="true"-->
        <!--                android:clickable="true"-->
        <!--                android:contentDescription="card0"-->
        <!--                android:focusable="true"-->
        <!--                android:maxWidth="54dp"-->
        <!--                android:maxHeight="54dp"-->
        <!--                android:scaleType="fitCenter"-->
        <!--                app:srcCompat="@drawable/albusdumbledore" />-->

        <!--            <ImageView-->
        <!--                android:id="@+id/imageView1"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginEnd="6dp"-->
        <!--                android:adjustViewBounds="true"-->
        <!--                android:clickable="true"-->
        <!--                android:contentDescription="card1"-->
        <!--                android:focusable="true"-->
        <!--                android:maxWidth="54dp"-->
        <!--                android:maxHeight="54dp"-->
        <!--                android:scaleType="fitCenter"-->
        <!--                app:srcCompat="@drawable/albusdumbledore" />-->

        <!--            <ImageView-->
        <!--                android:id="@+id/imageView2"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginEnd="6dp"-->
        <!--                android:adjustViewBounds="true"-->
        <!--                android:clickable="true"-->
        <!--                android:contentDescription="card2"-->
        <!--                android:focusable="true"-->
        <!--                android:maxWidth="54dp"-->
        <!--                android:maxHeight="54dp"-->
        <!--                android:scaleType="fitCenter"-->
        <!--                app:srcCompat="@drawable/albusdumbledore" />-->

        <!--            <ImageView-->
        <!--                android:id="@+id/imageView3"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginEnd="6dp"-->
        <!--                android:adjustViewBounds="true"-->
        <!--                android:clickable="true"-->
        <!--                android:contentDescription="card3"-->
        <!--                android:focusable="true"-->
        <!--                android:maxWidth="54dp"-->
        <!--                android:maxHeight="54dp"-->
        <!--                android:scaleType="fitCenter"-->
        <!--                app:srcCompat="@drawable/albusdumbledore" />-->

        <!--            <ImageView-->
        <!--                android:id="@+id/imageView4"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginEnd="6dp"-->
        <!--                android:adjustViewBounds="true"-->
        <!--                android:clickable="true"-->
        <!--                android:contentDescription="card4"-->
        <!--                android:focusable="true"-->
        <!--                android:maxWidth="54dp"-->
        <!--                android:maxHeight="54dp"-->
        <!--                android:scaleType="fitCenter"-->
        <!--                app:srcCompat="@drawable/albusdumbledore" />-->

        <!--            <ImageView-->
        <!--                android:id="@+id/imageView5"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginEnd="6dp"-->
        <!--                android:adjustViewBounds="true"-->
        <!--                android:clickable="true"-->
        <!--                android:contentDescription="card5"-->
        <!--                android:focusable="true"-->
        <!--                android:maxWidth="54dp"-->
        <!--                android:maxHeight="54dp"-->
        <!--                android:scaleType="fitCenter"-->
        <!--                app:srcCompat="@drawable/albusdumbledore" />-->
        <!--        </TableRow>-->

        <!--        <TableRow-->
        <!--            android:id="@+id/TableRow1"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:layout_marginBottom="16dp">-->

        <!--            <ImageView-->
        <!--                android:id="@+id/imageView0"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginEnd="6dp"-->
        <!--                android:adjustViewBounds="true"-->
        <!--                android:clickable="true"-->
        <!--                android:contentDescription="card0"-->
        <!--                android:focusable="true"-->
        <!--                android:maxWidth="54dp"-->
        <!--                android:maxHeight="54dp"-->
        <!--                android:scaleType="fitCenter"-->
        <!--                app:srcCompat="@drawable/albusdumbledore" />-->

        <!--            <ImageView-->
        <!--                android:id="@+id/imageView1"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginEnd="6dp"-->
        <!--                android:adjustViewBounds="true"-->
        <!--                android:clickable="true"-->
        <!--                android:contentDescription="card1"-->
        <!--                android:focusable="true"-->
        <!--                android:maxWidth="54dp"-->
        <!--                android:maxHeight="54dp"-->
        <!--                android:scaleType="fitCenter"-->
        <!--                app:srcCompat="@drawable/albusdumbledore" />-->

        <!--            <ImageView-->
        <!--                android:id="@+id/imageView2"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginEnd="6dp"-->
        <!--                android:adjustViewBounds="true"-->
        <!--                android:clickable="true"-->
        <!--                android:contentDescription="card2"-->
        <!--                android:focusable="true"-->
        <!--                android:maxWidth="54dp"-->
        <!--                android:maxHeight="54dp"-->
        <!--                android:scaleType="fitCenter"-->
        <!--                app:srcCompat="@drawable/albusdumbledore" />-->

        <!--            <ImageView-->
        <!--                android:id="@+id/imageView3"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginEnd="6dp"-->
        <!--                android:adjustViewBounds="true"-->
        <!--                android:clickable="true"-->
        <!--                android:contentDescription="card3"-->
        <!--                android:focusable="true"-->
        <!--                android:maxWidth="54dp"-->
        <!--                android:maxHeight="54dp"-->
        <!--                android:scaleType="fitCenter"-->
        <!--                app:srcCompat="@drawable/albusdumbledore" />-->

        <!--            <ImageView-->
        <!--                android:id="@+id/imageView4"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginEnd="6dp"-->
        <!--                android:adjustViewBounds="true"-->
        <!--                android:clickable="true"-->
        <!--                android:contentDescription="card4"-->
        <!--                android:focusable="true"-->
        <!--                android:maxWidth="54dp"-->
        <!--                android:maxHeight="54dp"-->
        <!--                android:scaleType="fitCenter"-->
        <!--                app:srcCompat="@drawable/albusdumbledore" />-->

        <!--            <ImageView-->
        <!--                android:id="@+id/imageView5"-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginEnd="6dp"-->
        <!--                android:adjustViewBounds="true"-->
        <!--                android:clickable="true"-->
        <!--                android:contentDescription="card5"-->
        <!--                android:focusable="true"-->
        <!--                android:maxWidth="54dp"-->
        <!--                android:maxHeight="54dp"-->
        <!--                android:scaleType="fitCenter"-->
        <!--                app:srcCompat="@drawable/albusdumbledore" />-->
        <!--        </TableRow>-->
    </TableLayout>

    <View
        android:id="@+id/divider5"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/timetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timetxt"
        app:layout_constraintBottom_toTopOf="@+id/divider4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_remaining"
        app:layout_constraintBottom_toTopOf="@+id/divider4"
        app:layout_constraintStart_toEndOf="@+id/timetext"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoretxt"
        app:layout_constraintBottom_toTopOf="@+id/divider4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        app:layout_constraintBottom_toTopOf="@+id/divider4"
        app:layout_constraintStart_toEndOf="@+id/scoreText"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switchSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/divider4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/playerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentplayer"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider5" />

    <TextView
        android:id="@+id/scoreText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player2_score"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toEndOf="@+id/playerText"
        app:layout_constraintTop_toBottomOf="@+id/divider5" />

    <TextView
        android:id="@+id/score2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score2"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scoreText2"
        app:layout_constraintTop_toBottomOf="@+id/divider5" />

</androidx.constraintlayout.widget.ConstraintLayout>